<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>br.unb.cic.mop</groupId>
    <artifactId>MOPSpec</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <java.version>8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <skipMopAgent>false</skipMopAgent>
        <skipTests>false</skipTests>

        <aspectj.version>1.8.1</aspectj.version>

        <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
        <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
        <fb-contrib.version>7.4.3.sb</fb-contrib.version>
        <dependency-check-maven.version>7.1.1</dependency-check-maven.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.runtimeverification.rvmonitor</groupId>
            <artifactId>rv-monitor</artifactId>
            <!-- Allow any released (non-snapshot) RV-Monitor release >= 1.3 -->
            <version>statistics-1.4</version>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjrt</artifactId>
            <version>${aspectj.version}</version>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjtools</artifactId>
            <version>${aspectj.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.surefire</groupId>
            <artifactId>surefire-junit4</artifactId>
            <version>${maven-surefire-plugin.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven-clean-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <debug>true</debug>
                        <parameters>false</parameters>
                        <verbose>false</verbose>
                        <optimize>true</optimize>
                        <showWarnings>false</showWarnings>
                        <showDeprecation>false</showDeprecation>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>br.unb.cic</groupId>
                <artifactId>mop-maven-plugin</artifactId>
                <version>1.0.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>mop-gen</goal>
                            <goal>agent-gen</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <pathToMopFiles>src/main/mop</pathToMopFiles>
                    <pathToJavaMop>${basedir}/../javamop/bin</pathToJavaMop>
                    <pathToMonitor>${basedir}/../rv-monitor/bin</pathToMonitor>
                    <generateMopStatistics>true</generateMopStatistics>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>-Xmx4096m -XX:MaxPermSize=1024m</argLine>
                    <argLine>-javaagent:${basedir}/JavaMOPAgent.jar</argLine>
                    <runOrder>alphabetical</runOrder>
                    <testFailureIgnore>false</testFailureIgnore>
                    <trimStackTrace>true</trimStackTrace>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>